--- a/login.html
+++ b/login.html
@@ -845,9 +845,7 @@
     });
   </script>
 
-<script src="sb-config.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="auth.js"></script><script src="common-nav.js"></script>
+
 <div aria-hidden="true" class="area-modal">
 <div class="area-modal-mask"></div>
 <div class="area-modal-panel">
@@ -864,5 +862,5 @@
 </div>
 </div>
 <div class="toast-message" id="form-toast"></div>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script><script src="sb-config.js"></script><script src="auth.js"></script><script src="common-nav.js"></script></body>
 </html>
