--- a/my-assets.html
+++ b/my-assets.html
@@ -464,7 +464,7 @@
 <div class="donut-inner">
 <strong>Total Assets</strong>
                 ≈$<span class="assets-usd-approx">--</span>
-              </div>
+</div>
 </div>
 </div>
 </div>
@@ -511,125 +511,121 @@
 </section>
 <h2 class="currency-title">Currency List</h2>
 <div class="currency-list">
-  <div class="currency-row">
-    <div class="currency-item">
-      <div class="currency-left">
-        <div class="currency-icon">
-          <img src="images/usdt.png" alt="USDT"/>
-        </div>
-        <div class="currency-name">USDT</div>
-      </div>
-      <div class="currency-right">
-        <span class="currency-amount" data-asset="USDT">--</span>
-        <button class="currency-arrow-btn" type="button">
-          <span class="currency-arrow">^</span>
-        </button>
-      </div>
-    </div>
-    <div class="currency-actions">
-      <div class="currency-actions-inner">
-        <button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
-        <button class="currency-btn" data-action="Withdraw">Withdraw</button>
-        <button class="currency-btn" data-action="Bills">Bills</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="currency-row">
-    <div class="currency-item">
-      <div class="currency-left">
-        <div class="currency-icon">
-          <img src="images/btc.png" alt="BTC"/>
-        </div>
-        <div class="currency-name">BTC</div>
-      </div>
-      <div class="currency-right">
-        <span class="currency-amount" data-asset="BTC">0</span>
-        <button class="currency-arrow-btn" type="button">
-          <span class="currency-arrow">^</span>
-        </button>
-      </div>
-    </div>
-    <div class="currency-actions">
-      <div class="currency-actions-inner">
-        <button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
-        <button class="currency-btn" data-action="Withdraw">Withdraw</button>
-        <button class="currency-btn" data-action="Bills">Bills</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="currency-row">
-    <div class="currency-item">
-      <div class="currency-left">
-        <div class="currency-icon">
-          <img src="images/eth.png" alt="ETH"/>
-        </div>
-        <div class="currency-name">ETH</div>
-      </div>
-      <div class="currency-right">
-        <span class="currency-amount" data-asset="ETH">0</span>
-        <button class="currency-arrow-btn" type="button">
-          <span class="currency-arrow">^</span>
-        </button>
-      </div>
-    </div>
-    <div class="currency-actions">
-      <div class="currency-actions-inner">
-        <button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
-        <button class="currency-btn" data-action="Withdraw">Withdraw</button>
-        <button class="currency-btn" data-action="Bills">Bills</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="currency-row">
-    <div class="currency-item">
-      <div class="currency-left">
-        <div class="currency-icon">
-          <img src="images/usdc.png" alt="USDC"/>
-        </div>
-        <div class="currency-name">USDC</div>
-      </div>
-      <div class="currency-right">
-        <span class="currency-amount" data-asset="USDC">0</span>
-        <button class="currency-arrow-btn" type="button">
-          <span class="currency-arrow">^</span>
-        </button>
-      </div>
-    </div>
-    <div class="currency-actions">
-      <div class="currency-actions-inner">
-        <button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
-        <button class="currency-btn" data-action="Withdraw">Withdraw</button>
-        <button class="currency-btn" data-action="Bills">Bills</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="currency-row">
-    <div class="currency-item">
-      <div class="currency-left">
-        <div class="currency-icon">
-          <img src="images/trx.png" alt="TRX"/>
-        </div>
-        <div class="currency-name">TRX</div>
-      </div>
-      <div class="currency-right">
-        <span class="currency-amount" data-asset="TRX">0</span>
-        <button class="currency-arrow-btn" type="button">
-          <span class="currency-arrow">^</span>
-        </button>
-      </div>
-    </div>
-    <div class="currency-actions">
-      <div class="currency-actions-inner">
-        <button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
-        <button class="currency-btn" data-action="Withdraw">Withdraw</button>
-        <button class="currency-btn" data-action="Bills">Bills</button>
-      </div>
-    </div>
-  </div>
+<div class="currency-row">
+<div class="currency-item">
+<div class="currency-left">
+<div class="currency-icon">
+<img alt="USDT" src="images/usdt.png"/>
+</div>
+<div class="currency-name">USDT</div>
+</div>
+<div class="currency-right">
+<span class="currency-amount" data-asset="USDT">--</span>
+<button class="currency-arrow-btn" type="button">
+<span class="currency-arrow">^</span>
+</button>
+</div>
+</div>
+<div class="currency-actions">
+<div class="currency-actions-inner">
+<button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
+<button class="currency-btn" data-action="Withdraw">Withdraw</button>
+<button class="currency-btn" data-action="Bills">Bills</button>
+</div>
+</div>
+</div>
+<div class="currency-row">
+<div class="currency-item">
+<div class="currency-left">
+<div class="currency-icon">
+<img alt="BTC" src="images/btc.png"/>
+</div>
+<div class="currency-name">BTC</div>
+</div>
+<div class="currency-right">
+<span class="currency-amount" data-asset="BTC">0</span>
+<button class="currency-arrow-btn" type="button">
+<span class="currency-arrow">^</span>
+</button>
+</div>
+</div>
+<div class="currency-actions">
+<div class="currency-actions-inner">
+<button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
+<button class="currency-btn" data-action="Withdraw">Withdraw</button>
+<button class="currency-btn" data-action="Bills">Bills</button>
+</div>
+</div>
+</div>
+<div class="currency-row">
+<div class="currency-item">
+<div class="currency-left">
+<div class="currency-icon">
+<img alt="ETH" src="images/eth.png"/>
+</div>
+<div class="currency-name">ETH</div>
+</div>
+<div class="currency-right">
+<span class="currency-amount" data-asset="ETH">0</span>
+<button class="currency-arrow-btn" type="button">
+<span class="currency-arrow">^</span>
+</button>
+</div>
+</div>
+<div class="currency-actions">
+<div class="currency-actions-inner">
+<button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
+<button class="currency-btn" data-action="Withdraw">Withdraw</button>
+<button class="currency-btn" data-action="Bills">Bills</button>
+</div>
+</div>
+</div>
+<div class="currency-row">
+<div class="currency-item">
+<div class="currency-left">
+<div class="currency-icon">
+<img alt="USDC" src="images/usdc.png"/>
+</div>
+<div class="currency-name">USDC</div>
+</div>
+<div class="currency-right">
+<span class="currency-amount" data-asset="USDC">0</span>
+<button class="currency-arrow-btn" type="button">
+<span class="currency-arrow">^</span>
+</button>
+</div>
+</div>
+<div class="currency-actions">
+<div class="currency-actions-inner">
+<button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
+<button class="currency-btn" data-action="Withdraw">Withdraw</button>
+<button class="currency-btn" data-action="Bills">Bills</button>
+</div>
+</div>
+</div>
+<div class="currency-row">
+<div class="currency-item">
+<div class="currency-left">
+<div class="currency-icon">
+<img alt="TRX" src="images/trx.png"/>
+</div>
+<div class="currency-name">TRX</div>
+</div>
+<div class="currency-right">
+<span class="currency-amount" data-asset="TRX">0</span>
+<button class="currency-arrow-btn" type="button">
+<span class="currency-arrow">^</span>
+</button>
+</div>
+</div>
+<div class="currency-actions">
+<div class="currency-actions-inner">
+<button class="currency-btn currency-btn-primary" data-action="Deposit">Deposit</button>
+<button class="currency-btn" data-action="Withdraw">Withdraw</button>
+<button class="currency-btn" data-action="Bills">Bills</button>
+</div>
+</div>
+</div>
 </div>
 </main>
 <nav class="bottom-nav">
@@ -747,10 +743,8 @@
   }
 })();
 </script>
-<script src="sb-config.js"></script>
-<script src="auth.js"></script>
-<script src="sb-balance.js"></script>
-<script src="sb-assets.js"></script>
-<script src="common-nav.js"></script>
-</body>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script><script src="sb-config.js"></script><script src="auth.js"></script><script src="sb-balance.js"></script><script src="common-nav.js"></script></body>
 </html>
