--- a/my-team.html
+++ b/my-team.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>My Team - EXARAI</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport"/>
+<title>My Team - EXARAI</title>
+<style>
     :root {
       --el-bg-color: #0C0B10;
       --el-bg-color-1: #17202D;
@@ -371,126 +372,113 @@
   </style>
 </head>
 <body>
-  <div class="app">
-    <header class="app-header">
-      <a href="javascript:history.back()" class="back-btn">
-        <div class="back-arrow"></div>
-      </a>
-      <div class="app-header-title">My Team</div>
-    </header>
-
-    <main class="app-main">
-      <div class="top-tag">
-        <div class="top-tag-avatar">
-          <img src="images/level-icon.png" alt="My Team" />
-        </div>
-        <span>My Team</span>
-      </div>
-
-      <section class="summary-card">
-        <div class="summary-box">
-          <div class="summary-label">Team Size</div>
-          <div class="summary-value">0/0</div>
-        </div>
-        <div class="summary-box">
-          <div class="summary-label">Today&apos;s Earnings/Total revenue</div>
-          <div class="summary-value">0/0</div>
-        </div>
-      </section>
-
-      <div class="section-title">Effective user data</div>
-
-      <section class="generation-card">
-        <div class="generation-header">1Generation</div>
-        <div class="generation-values">
-          <span>0/0</span>
-          <span>0%</span>
-          <span>0/0</span>
-        </div>
-        <div class="generation-footer">
-          <span>Effective member</span>
-          <span>Commission percentage</span>
-          <span>Income</span>
-        </div>
-      </section>
-
-      <section class="generation-card">
-        <div class="generation-header">2Generation</div>
-        <div class="generation-values">
-          <span>0/0</span>
-          <span>0%</span>
-          <span>0/0</span>
-        </div>
-        <div class="generation-footer">
-          <span>Effective member</span>
-          <span>Commission percentage</span>
-          <span>Income</span>
-        </div>
-      </section>
-
-      <section class="generation-card">
-        <div class="generation-header">3Generation</div>
-        <div class="generation-values">
-          <span>0/0</span>
-          <span>0%</span>
-          <span>0/0</span>
-        </div>
-        <div class="generation-footer">
-          <span>Effective member</span>
-          <span>Commission percentage</span>
-          <span>Income</span>
-        </div>
-      </section>
-
-      <div class="section-title-list">Team List</div>
-
-      <div class="filter-row">
-        <div class="filter-input">
-          <span class="placeholder">Start Time</span>
-        </div>
-        <div class="filter-input">
-          <span class="placeholder">End Time</span>
-        </div>
-      </div>
-
-      <div class="dropdown-row">
-        <span>All Levels</span>
-        <span class="chevron">▾</span>
-      </div>
-      <div class="dropdown-row">
-        <span>All Users</span>
-        <span class="chevron">▾</span>
-      </div>
-      <div class="dropdown-row">
-        <span>LV.1</span>
-        <span class="chevron">▾</span>
-      </div>
-
-      <div class="collapse-row">Collapse ▲</div>
-
-      <table class="team-table">
-        <thead>
-          <tr>
-            <th>Account</th>
-            <th>ID</th>
-            <th>Level</th>
-            <th>Registration time</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-        </tbody>
-      </table>
-    </main>
-  </div>
-
-  
-  <script>
+<div class="app">
+<header class="app-header">
+<a class="back-btn" href="javascript:history.back()">
+<div class="back-arrow"></div>
+</a>
+<div class="app-header-title">My Team</div>
+</header>
+<main class="app-main">
+<div class="top-tag">
+<div class="top-tag-avatar">
+<img alt="My Team" src="images/level-icon.png"/>
+</div>
+<span>My Team</span>
+</div>
+<section class="summary-card">
+<div class="summary-box">
+<div class="summary-label">Team Size</div>
+<div class="summary-value">0/0</div>
+</div>
+<div class="summary-box">
+<div class="summary-label">Today's Earnings/Total revenue</div>
+<div class="summary-value">0/0</div>
+</div>
+</section>
+<div class="section-title">Effective user data</div>
+<section class="generation-card">
+<div class="generation-header">1Generation</div>
+<div class="generation-values">
+<span>0/0</span>
+<span>0%</span>
+<span>0/0</span>
+</div>
+<div class="generation-footer">
+<span>Effective member</span>
+<span>Commission percentage</span>
+<span>Income</span>
+</div>
+</section>
+<section class="generation-card">
+<div class="generation-header">2Generation</div>
+<div class="generation-values">
+<span>0/0</span>
+<span>0%</span>
+<span>0/0</span>
+</div>
+<div class="generation-footer">
+<span>Effective member</span>
+<span>Commission percentage</span>
+<span>Income</span>
+</div>
+</section>
+<section class="generation-card">
+<div class="generation-header">3Generation</div>
+<div class="generation-values">
+<span>0/0</span>
+<span>0%</span>
+<span>0/0</span>
+</div>
+<div class="generation-footer">
+<span>Effective member</span>
+<span>Commission percentage</span>
+<span>Income</span>
+</div>
+</section>
+<div class="section-title-list">Team List</div>
+<div class="filter-row">
+<div class="filter-input">
+<span class="placeholder">Start Time</span>
+</div>
+<div class="filter-input">
+<span class="placeholder">End Time</span>
+</div>
+</div>
+<div class="dropdown-row">
+<span>All Levels</span>
+<span class="chevron">▾</span>
+</div>
+<div class="dropdown-row">
+<span>All Users</span>
+<span class="chevron">▾</span>
+</div>
+<div class="dropdown-row">
+<span>LV.1</span>
+<span class="chevron">▾</span>
+</div>
+<div class="collapse-row">Collapse ▲</div>
+<table class="team-table">
+<thead>
+<tr>
+<th>Account</th>
+<th>ID</th>
+<th>Level</th>
+<th>Registration time</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+</main>
+</div>
+<script>
     (function () {
       // Toggle collapse of filters + dropdowns
       var collapseRow = document.querySelector('.collapse-row');
@@ -562,11 +550,7 @@
   </script>
 
 
-  <script src="sb-config.js"></script>
-<script src="sb-user.js"></script>
-  <script src="wallet.js"></script>
-
-  <script>
+<script>
     (function () {
       function apiHeaders() {
         return {
@@ -702,6 +686,5 @@
       }
     })();
   </script>
-
-</body>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script><script src="sb-config.js"></script><script src="sb-user.js"></script><script src="wallet.js"></script></body>
 </html>
