--- a/invite.html
+++ b/invite.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Invite Friends</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport"/>
+<title>Invite Friends</title>
+<style>
     :root {
       --page-bg: #05070b;
       --card-bg: #05070b;
@@ -210,52 +211,46 @@
   </style>
 </head>
 <body>
-  <div class="app">
-    <header class="app-header">
-      <a href="javascript:history.back()" class="back-btn">
-        <div class="back-arrow"></div>
-      </a>
-      <div class="app-header-title">Invite Friends</div>
-    </header>
-
-    <main class="app-main">
-      <div class="page-title">Invite friends and earn more rewards</div>
-
-      <section class="poster-card">
-        <div class="poster-inner">
-          <img src="images/invite-bg.png" alt="Invite Friends Poster" />
-        </div>
-      </section>
-
-      <section class="info-card">
-        <div class="info-row-label">Link</div>
-        <div class="info-row">
-          <span class="value" id="inviteLink"></span>
-          <button class="copy-btn" type="button" data-target="inviteLink" aria-label="Copy link">
-            <svg class="copy-icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M9 3a3 3 0 0 1 3-3h7a3 3 0 0 1 3 3v7a3 3 0 0 1-3 3h-7a3 3 0 0 1-3-3V3zm3-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1h-7z"></path>
-              <path d="M4 7a3 3 0 0 1 3-3h1a1 1 0 1 1 0 2H7a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7z"></path>
-            </svg>
-          </button>
-        </div>
-
-        <div class="info-row-label">Invitation Code</div>
-        <div class="info-row">
-          <span class="value" id="inviteCode"></span>
-          <button class="copy-btn" type="button" data-target="inviteCode" aria-label="Copy code">
-            <svg class="copy-icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M9 3a3 3 0 0 1 3-3h7a3 3 0 0 1 3 3v7a3 3 0 0 1-3 3h-7a3 3 0 0 1-3-3V3zm3-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1h-7z"></path>
-              <path d="M4 7a3 3 0 0 1 3-3h1a1 1 0 1 1 0 2H7a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7z"></path>
-            </svg>
-          </button>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <div id="invite-toast" class="toast-message"></div>
-
-  <script>
+<div class="app">
+<header class="app-header">
+<a class="back-btn" href="javascript:history.back()">
+<div class="back-arrow"></div>
+</a>
+<div class="app-header-title">Invite Friends</div>
+</header>
+<main class="app-main">
+<div class="page-title">Invite friends and earn more rewards</div>
+<section class="poster-card">
+<div class="poster-inner">
+<img alt="Invite Friends Poster" src="images/invite-bg.png"/>
+</div>
+</section>
+<section class="info-card">
+<div class="info-row-label">Link</div>
+<div class="info-row">
+<span class="value" id="inviteLink"></span>
+<button aria-label="Copy link" class="copy-btn" data-target="inviteLink" type="button">
+<svg aria-hidden="true" class="copy-icon" viewbox="0 0 24 24">
+<path d="M9 3a3 3 0 0 1 3-3h7a3 3 0 0 1 3 3v7a3 3 0 0 1-3 3h-7a3 3 0 0 1-3-3V3zm3-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1h-7z"></path>
+<path d="M4 7a3 3 0 0 1 3-3h1a1 1 0 1 1 0 2H7a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7z"></path>
+</svg>
+</button>
+</div>
+<div class="info-row-label">Invitation Code</div>
+<div class="info-row">
+<span class="value" id="inviteCode"></span>
+<button aria-label="Copy code" class="copy-btn" data-target="inviteCode" type="button">
+<svg aria-hidden="true" class="copy-icon" viewbox="0 0 24 24">
+<path d="M9 3a3 3 0 0 1 3-3h7a3 3 0 0 1 3 3v7a3 3 0 0 1-3 3h-7a3 3 0 0 1-3-3V3zm3-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1h-7z"></path>
+<path d="M4 7a3 3 0 0 1 3-3h1a1 1 0 1 1 0 2H7a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7z"></path>
+</svg>
+</button>
+</div>
+</section>
+</main>
+</div>
+<div class="toast-message" id="invite-toast"></div>
+<script>
     (function () {
       function showToast(message) {
         var toast = document.getElementById("invite-toast");
@@ -311,11 +306,8 @@
     })();
   </script>
 
-  <script src="sb-config.js"></script>
-<script src="sb-user.js"></script>
-  <script src="common-nav.js"></script>
 
-  <script>
+<script>
     (function () {
       async function applyInviteFromSupabase() {
         try {
@@ -344,6 +336,5 @@
       }
     })();
   </script>
-
-</body>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script><script src="sb-config.js"></script><script src="sb-user.js"></script><script src="common-nav.js"></script></body>
 </html>
