--- a/signup.html
+++ b/signup.html
@@ -559,8 +559,6 @@
 </div>
 </div>
 <div class="toast-message" id="form-toast"></div>
-<script src="sb-config.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -713,7 +711,7 @@ document.addEventListener("DOMContentLoaded", function () {
   }
 });
 </script>
-<script src="auth.js"></script>
-<script src="common-nav.js"></script>
-</body>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script><script src="sb-config.js"></script><script src="auth.js"></script><script src="common-nav.js"></script></body>
 </html>
